--- a/pom.xml
+++ b/pom.xml
@@ -1,15 +1,14 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	 xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion>
 
   <groupId>net.duckling</groupId>
   <artifactId>ddl</artifactId>
-  <version>4.5.0-SNAPSHOT</version>
+  <version>4.5.0</version>
   <packaging>war</packaging>
 
   <name>ddl</name>
-  <url></url>
+  <url>ddl.escience.cn</url>
 
   <properties>
     <springframework.version>4.0.9.RELEASE</springframework.version>
@@ -231,7 +230,7 @@
       <scope>provided</scope>
     </dependency>
     <dependency>
-      <groupId>javax.xml</groupId>
+      <groupId>javax.xml.bind</groupId>
       <artifactId>jaxb-api</artifactId>
       <version>2.1</version>
       <exclusions>
@@ -371,7 +370,7 @@
       <version>4.3.4</version>
     </dependency>
     <dependency>
-      <groupId>jdom</groupId>
+      <groupId>org.jdom</groupId>
       <artifactId>jdom</artifactId>
       <version>1.1</version>
     </dependency>
@@ -427,8 +426,6 @@
       <version>2.6.3</version>
     </dependency>
 
-    <!-- Tiles Dependencies tiles-api.jar tiles-core.jar tiles-el.jar tiles-jsp.jar 
-	 tiles-servlet.jar tiles-template.jar -->
     <dependency>
       <groupId>org.apache.tiles</groupId>
       <artifactId>tiles-api</artifactId>
@@ -602,7 +599,7 @@
     <dependency>
       <groupId>net.duckling</groupId>
       <artifactId>clb-api</artifactId>
-      <version>6.3.4-SNAPSHOT</version>
+      <version>6.4.0-SNAPSHOT</version>
       <exclusions>
         <exclusion>
           <groupId>com.google.code.gson</groupId>
@@ -618,7 +615,7 @@
     <dependency>
       <groupId>net.duckling</groupId>
       <artifactId>frmwork</artifactId>
-      <version>1.01</version>
+      <version>1.1.1</version>
     </dependency>
     <dependency>
       <groupId>net.duckling</groupId>
@@ -735,11 +732,6 @@
       <version>3.13</version>
     </dependency>
     <dependency>
-      <groupId>org.apache.poi</groupId>
-      <artifactId>poi-ooxml</artifactId>
-      <version>3.13</version>
-    </dependency>
-    <dependency>
       <groupId>com.itextpdf</groupId>
       <artifactId>itextpdf</artifactId>
       <version>5.5.4</version>
@@ -754,44 +746,24 @@
       <artifactId>IKAnalyzer</artifactId>
       <version>2012</version>
     </dependency>
+
+    <dependency>
+      <groupId>com.googlecode.json-simple</groupId>
+      <artifactId>json-simple</artifactId>
+      <version>1.1.1</version>
+    </dependency>
+    <!-- UserAgentUtils/jackson-all required-by falcon-api -->
+    <dependency>
+      <groupId>nl.bitwalker</groupId>
+      <artifactId>UserAgentUtils</artifactId>
+      <version>1.2.4</version>
+    </dependency>
+    <dependency>
+      <groupId>org.codehaus.jackson</groupId>
+      <artifactId>jackson-all</artifactId>
+      <version>1.7.6</version>
+    </dependency>
   </dependencies>
-
-  <repositories>
-    <repository>
-      <id>nexus</id>
-      <name>Nexus</name>
-      <url>http://nexus.cerc.cnic.cn/nexus/content/groups/cerc/</url>
-      <releases>
-	<enabled>true</enabled>
-      </releases>
-      <snapshots>
-	<enabled>true</enabled>
-      </snapshots>
-    </repository>
-    <repository>
-      <id>cerc-snapshot</id>
-      <name>Cerc Snapshot</name>
-      <url>http://nexus.cerc.cnic.cn/nexus/content/groups/cerc-snapshots/</url>
-      <snapshots>
-	<enabled>true</enabled>
-	<updatePolicy>always</updatePolicy>
-      </snapshots>
-    </repository>
-  </repositories>
-
-  <pluginRepositories>
-    <pluginRepository>
-      <id>nexus</id>
-      <name>Nexus</name>
-      <url>http://nexus.cerc.cnic.cn/nexus/content/groups/cerc/</url>
-      <releases>
-	<enabled>true</enabled>
-      </releases>
-      <snapshots>
-	<enabled>true</enabled>
-      </snapshots>
-    </pluginRepository>
-  </pluginRepositories>
 
   <build>
     <finalName>ddl</finalName>
