--- a/pom.xml
+++ b/pom.xml
@@ -21,7 +21,6 @@
       <groupId>stax</groupId>
       <artifactId>stax</artifactId>
       <version>1.2.0</version>
-      <scope>provided</scope>
     </dependency>
     <dependency>
       <groupId>opensymphony</groupId>
@@ -37,25 +36,21 @@
 	  <groupId>javax.servlet</groupId>
 	</exclusion>
       </exclusions>
-      <scope>provided</scope>
     </dependency>
     <dependency>
       <groupId>org.springframework</groupId>
       <artifactId>spring-instrument-tomcat</artifactId>
-      <version>3.0.5.RELEASE</version>
-      <scope>provided</scope>
+      <version>${springframework.version}</version>
     </dependency>
     <dependency>
       <groupId>javax.activation</groupId>
       <artifactId>activation</artifactId>
       <version>1.1</version>
-      <scope>provided</scope>
     </dependency>
     <dependency>
       <groupId>commons-logging</groupId>
       <artifactId>commons-logging</artifactId>
       <version>1.1</version>
-      <scope>provided</scope>
       <exclusions>
 	<exclusion>
 	  <artifactId>servlet-api</artifactId>
@@ -71,13 +66,11 @@
       <groupId>commons-beanutils</groupId>
       <artifactId>commons-beanutils</artifactId>
       <version>1.8.3</version>
-      <scope>provided</scope>
     </dependency>
     <dependency>
       <groupId>commons-digester</groupId>
       <artifactId>commons-digester</artifactId>
       <version>1.8</version>
-      <scope>provided</scope>
       <exclusions>
 	<exclusion>
 	  <artifactId>commons-beanutils</artifactId>
@@ -89,67 +82,56 @@
       <groupId>commons-codec</groupId>
       <artifactId>commons-codec</artifactId>
       <version>1.4</version>
-      <scope>provided</scope>
     </dependency>
     <dependency>
       <groupId>commons-cli</groupId>
       <artifactId>commons-cli</artifactId>
       <version>1.2</version>
-      <scope>provided</scope>
     </dependency>
     <dependency>
       <groupId>commons-collections</groupId>
       <artifactId>commons-collections</artifactId>
       <version>3.2.1</version>
-      <scope>provided</scope>
     </dependency>
     <dependency>
       <groupId>org.apache.commons</groupId>
       <artifactId>commons-compress</artifactId>
       <version>1.4.1</version>
-      <scope>provided</scope>
     </dependency>
     <dependency>
       <groupId>commons-fileupload</groupId>
       <artifactId>commons-fileupload</artifactId>
       <version>1.2.2</version>
-      <scope>provided</scope>
     </dependency>
     <dependency>
       <groupId>net.duckling</groupId>
       <artifactId>httpclient-duckling</artifactId>
       <version>3.0.1</version>
-      <scope>provided</scope>
     </dependency>
     <dependency>
       <groupId>commons-io</groupId>
       <artifactId>commons-io</artifactId>
       <version>2.3</version>
-      <scope>provided</scope>
     </dependency>
     <dependency>
       <groupId>commons-lang</groupId>
       <artifactId>commons-lang</artifactId>
       <version>2.6</version>
-      <scope>provided</scope>
     </dependency>
     <dependency>
       <groupId>mysql</groupId>
       <artifactId>mysql-connector-java</artifactId>
       <version>5.1.20</version>
-      <scope>provided</scope>
     </dependency>
     <dependency>
       <groupId>taglibs</groupId>
       <artifactId>standard</artifactId>
       <version>1.1.2</version>
-      <scope>provided</scope>
     </dependency>
     <dependency>
       <groupId>org.bouncycastle</groupId>
       <artifactId>bcprov-jdk15</artifactId>
       <version>1.46</version>
-      <scope>provided</scope>
     </dependency>
     <dependency>
       <groupId>javax.servlet</groupId>
@@ -167,67 +149,56 @@
       <groupId>javax.servlet</groupId>
       <artifactId>jstl</artifactId>
       <version>1.2</version>
-      <scope>provided</scope>
     </dependency>
     <dependency>
       <groupId>net.duckling</groupId>
       <artifactId>pluto-container</artifactId>
       <version>2.0.0</version>
-      <scope>provided</scope>
     </dependency>
     <dependency>
       <groupId>net.duckling</groupId>
       <artifactId>pluto-container-api</artifactId>
       <version>2.0.0</version>
-      <scope>provided</scope>
     </dependency>
     <dependency>
       <groupId>net.duckling</groupId>
       <artifactId>pluto-taglib</artifactId>
       <version>2.0.0</version>
-      <scope>provided</scope>
     </dependency>
     <dependency>
       <groupId>net.duckling</groupId>
       <artifactId>pluto-util</artifactId>
       <version>2.0.0</version>
-      <scope>provided</scope>
     </dependency>
     <dependency>
       <groupId>net.duckling</groupId>
       <artifactId>portlet-api-ext</artifactId>
       <version>2.0</version>
-      <scope>provided</scope>
     </dependency>
     <dependency>
       <groupId>net.duckling</groupId>
       <artifactId>portlet-api</artifactId>
       <version>2.0</version>
-      <scope>provided</scope>
     </dependency>
     <dependency>
       <groupId>net.duckling</groupId>
       <artifactId>duckling-common</artifactId>
       <version>6.0.3</version>
-      <scope>provided</scope>
     </dependency>
     <dependency>
       <groupId>net.duckling</groupId>
       <artifactId>simple-auth</artifactId>
       <version>5.0.9</version>
-      <scope>provided</scope>
     </dependency>
     <dependency>
       <groupId>aopalliance</groupId>
       <artifactId>aopalliance</artifactId>
       <version>1.0</version>
-      <scope>provided</scope>
     </dependency>
     <dependency>
       <groupId>javax.ccpp</groupId>
       <artifactId>ccpp</artifactId>
       <version>1.0</version>
-      <scope>provided</scope>
     </dependency>
     <dependency>
       <groupId>javax.xml.bind</groupId>
@@ -243,25 +214,21 @@
 	  <groupId>javax.activation</groupId>
 	</exclusion>
       </exclusions>
-      <scope>provided</scope>
     </dependency>
     <dependency>
       <groupId>javax.xml</groupId>
       <artifactId>jaxp-api</artifactId>
       <version>1.4.2</version>
-      <scope>provided</scope>
     </dependency>
     <dependency>
       <groupId>stax</groupId>
       <artifactId>stax-api</artifactId>
       <version>1.0.1</version>
-      <scope>provided</scope>
     </dependency>
     <dependency>
       <groupId>com.thoughtworks.xstream</groupId>
       <artifactId>xstream</artifactId>
       <version>1.4.2</version>
-      <scope>provided</scope>
       <exclusions>
 	<exclusion>
 	  <artifactId>xpp3_min</artifactId>
@@ -273,7 +240,6 @@
       <groupId>org.xmlpull</groupId>
       <artifactId>xpp3_min</artifactId>
       <version>1.1.4c</version>
-      <scope>provided</scope>
     </dependency>
 
     <!-- Remote Dependencies -->
