--- a/nginx-ddl/nginx.conf
+++ b/nginx-ddl/nginx.conf
@@ -53,6 +53,9 @@ http {
             proxy_set_header X-Forward-For $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header X-Forward-Scheme $scheme;
+
+	    client_max_body_size     2000m;
+	    client_body_buffer_size  128m;
         }
 
 	location ~* ^/cache_redirect/(.*?)/(.*) {
