--- a/src/main/webapp/WEB-INF/templates/admin/site.properties
+++ b/src/main/webapp/WEB-INF/templates/admin/site.properties
@@ -16,19 +16,19 @@ duckling.dateformat =yyyy-MM-dd HH:mm
 
 #Email configuration for all program. 
 #mysql fasong dizhi
-email.mail.smtp.host=smtp.cnic.cn
+email.mail.smtp.host=smtp.domain.cn
 #mysql fasong yaobuyaorenzheng
 email.mail.smtp.auth=true
 #delete  -->log 
-email.mail.pop3.host=pop.cnic.cn
+email.mail.pop3.host=pop.domain.cn
 #mysql huifu youjiandizhi
-email.fromAddress=document@cnic.cn
+email.fromAddress=document@domain.cn
 #mysql fasongdizhi
-email.address=document@cnic.cn
+email.address=document@domain.cn
 #mysql
-email.username=document@cnic.cn
+email.username=document@domain.cn
 #mysql
-email.password=111111
+email.password=PASSWORD
 
 
 
