Correct nginx.conf ($server_port) and update vwbconfig-TEMPLATE.

--- a/src/main/webapp/WEB-INF/conf/vwbconfig-TEMPLATE.properties
+++ b/src/main/webapp/WEB-INF/conf/vwbconfig-TEMPLATE.properties
@@ -49,6 +49,10 @@ duckling.vmt.site = http://localhost:8080/vmt
 #duckling.vmt.keyCenter = ${duckling.vmt.site}/keyServiceServlet
 #duckling.vmt.api.service = ${duckling.vmt.site}/newServiceServlet
 
+# vmt.service uses ip_filter for access control,
+# set by admin at vmt's web UI
+duckling.vmt.service.address=http://vmttest.domain.cn/services
+
 ####### CLB ###########
 duckling.clb.url=http://10.10.2.5:8080/clb
 duckling.clb.aone.user=USERNAME
@@ -158,12 +162,15 @@ duckling.dlog.pool.size=20
 duckling.dlog.application.name=ddltest
 
 ddl.client.accepted.ip=159\\.226\\.(14\\.1\\d{1,2}|251\\.\\d{1,3}|56\\.139|27\\.45)|159\\.226\\.10\\.138
+
+# why coremail here?
 ddl.coremail.download.domain=http://ddll.domain.cn/
 
-#vmt get team info user and password
+# user and password for vmt's getting info from ddl
+# They must be same as the correspondants on the other side
+# vmt.properties: ddl.api.username/password
 duckling.vmt.getteaminfo.user=USERNAME
 duckling.vmt.getteaminfo.password=PASSWORD
-duckling.vmt.service.address=https://vmttest.domain.cn/services
 
 ############### MessageQueue ##############
 duckling.mq.host=10.10.1.76
@@ -188,14 +195,13 @@ duckling.team.space.open =true
 duckling.user.default.team.size=100
 
 #umt oauth configure
-client_id=test
-client_secret=test
-#client_id=12345
-#client_secret=I2GwWvu85FdGekiHdCzB56KyF6NS1JD4
+client_id=ID
+client_secret=SECRET
 redirect_uri=${duckling.baseURL}/system/login/token
 access_token_URL=${duckling.umt.site}/oauth2/token
 authorize_URL=${duckling.umt.site}/oauth2/authorize
 scope=
+# theme could be full/simple/embed
 theme=full
 
 dchat.ip=127.0.0.1
