--- a/nginx-ddl/nginx.conf
+++ b/nginx-ddl/nginx.conf
@@ -38,7 +38,7 @@ http {
     #gzip  on;
 
     server {
-        listen       80;
+        listen       8090;
         server_name  ddl.local;
 
         charset utf-8;
@@ -46,10 +46,10 @@ http {
         #access_log  logs/host.access.log  main;
 
         location / {
-	    proxy_pass http://ddl.local:8080;
+	    proxy_pass http://ddl.local:8088;
             proxy_set_header REMOTE-HOST $remote_addr;
             proxy_set_header X-Real-IP $remote_addr;
-            proxy_set_header Host $host;
+            proxy_set_header Host $host:$server_port;
             proxy_set_header X-Forward-For $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header X-Forward-Scheme $scheme;
