Remove files no longer needed in localdep/.

--- a/src/main/webapp/WEB-INF/conf/log4j.properties
+++ b/src/main/webapp/WEB-INF/conf/log4j.properties
@@ -5,6 +5,9 @@
 #INFO 6
 #DEBUG 7
 log4j.rootCategory=info,FileLog, Console
+log4j.logger.org.springframework.web.servlet.mvc.annotation=WARN
+#log4j.logger.net.duckling.ddl=DEBUG
+#log4j.logger.net.duckling.ddl.web.controller.LynxEmailResourceController=DEBUG
 
 log4j.appender.syslog.encoding=UTF-8
 
@@ -25,7 +28,6 @@ log4j.appender.FileLog.MaxFileSize    = 3MB
 log4j.appender.FileLog.MaxBackupIndex = 14
 log4j.appender.FileLog.layout = org.apache.log4j.PatternLayout
 log4j.appender.FileLog.layout.ConversionPattern=%d [%t] %p %c %x - %m%n
-log4j.logger.org.springframework.web.servlet.mvc.annotation=WARN
 
 log4j.additivity.user = false
 log4j.logger.user= INFO,user
@@ -34,4 +36,3 @@ log4j.appender.user.File=${catalina.base}/logs/user.log
 log4j.appender.user.layout=org.apache.log4j.PatternLayout
 log4j.appender.user.layout.ConversionPattern=%m%n
 
-log4j.logger.net.duckling.ddl.web.controller.LynxEmailResourceController=DEBUG
