Update log4j 1.2.17 to reload4j 1.2.18. And slf4j is chosen.

--- a/src/main/webapp/WEB-INF/conf/log4j.properties
+++ b/src/main/webapp/WEB-INF/conf/log4j.properties
@@ -6,7 +6,7 @@
 #DEBUG 7
 log4j.rootCategory=info,FileLog, Console
 log4j.logger.org.springframework.web.servlet.mvc.annotation=WARN
-#log4j.logger.net.duckling.ddl=DEBUG
+log4j.logger.net.duckling.ddl=DEBUG
 #log4j.logger.net.duckling.ddl.web.controller.LynxEmailResourceController=DEBUG
 
 log4j.appender.syslog.encoding=UTF-8
