Try to make VMT optional to DDL. A simple test passed.

--- a/src/main/webapp/WEB-INF/conf/vwbconfig.properties
+++ b/src/main/webapp/WEB-INF/conf/vwbconfig.properties
@@ -1,3 +1,8 @@
+#
+# Items started with "duckling." if set by Java System property, it
+# takes precedence over here.
+# 
+
 #####################
 # Datasource config #
 #####################
@@ -24,7 +29,7 @@ databaseSub.url = jdbc:mysql://${databaseSub.ip}/${databaseSub}?useUnicode=true&
 # databaseSub.password = <move-to-secret>
 
 ####### UMT ###########
-duckling.umt.site = http://localhost:8080/umt
+duckling.umt.site = http://localhost:8090/umt
 duckling.umt.theme = 
 duckling.umt.login = ${duckling.umt.site}/login
 duckling.umt.logout=${duckling.umt.site}/logout
@@ -35,6 +40,16 @@ duckling.umt.service.url=${duckling.umt.site}/services
 duckling.umt.change.password=${duckling.umt.site}/user/password.do?act=showChangePassword
 duckling.umt.api.getLastLoginTime=${duckling.umt.site}/rest/api?act=getLastLoginTime&cstnetId=
 
+# umt oauth configure
+# client_id=<move-to-secret>
+# client_secret=<move-to-secret>
+redirect_uri=${duckling.baseURL}/system/login/token
+access_token_URL=${duckling.umt.site}/oauth2/token
+authorize_URL=${duckling.umt.site}/oauth2/authorize
+scope=
+# theme could be full/simple/embed
+theme=full
+
 # Used in UmtSsoLoginProvider.java , remove?
 duckling.dct.localName=dct
 
@@ -44,16 +59,18 @@ duckling.vmt.site = http://localhost:8080/vmt
 
 # vmt.service uses ip_filter for access control,
 # IPs are set by admin at vmt's web UI
-duckling.vmt.service.address=${duckling.vmt.site}/services
+# duckling.vmt.service.address=${duckling.vmt.site}/services
+# disabled if set to 'null'
+duckling.vmt.service.address=null
 
 ####### CLB ###########
-duckling.clb.url=http://127.0.0.1:8080/clb
+duckling.clb.site=http://127.0.0.1:8090/clb
 # duckling.clb.aone.user=<move-to-secret>
 # duckling.clb.aone.password=<move-to-secret>
 duckling.clb.aone.version=current
 duckling.clb.aone.ismaintain=false
-duckling.clb = ${duckling.clb.url}/rest
-duckling.clb.service= ${duckling.clb.url}/ServiceServlet
+duckling.clb = ${duckling.clb.site}/rest
+duckling.clb.service= ${duckling.clb.site}/ServiceServlet
 duckling.clb.security = app
 duckling.clb.dconvert.enable=true
 
@@ -150,23 +167,12 @@ duckling.emailnotice.triggertime=01:01
 # day_of_week, Sunday is 1 and Saturday is 7
 duckling.emailnotice.triggerdayofweek=2
 
-# clb have compress image function
 # default team size 10G
 duckling.team.default.size=10737418240
 duckling.team.space.open =true
 
 # the maximum created team size of user 
 duckling.user.default.team.size=100
-
-# umt oauth configure
-# client_id=<move-to-secret>
-# client_secret=<move-to-secret>
-redirect_uri=${duckling.baseURL}/system/login/token
-access_token_URL=${duckling.umt.site}/oauth2/token
-authorize_URL=${duckling.umt.site}/oauth2/authorize
-scope=
-# theme could be full/simple/embed
-theme=full
 
 #x/y, x letters per y milliseconds. 
 ddl.team.email.inviter=10/180000
