Make rabbitmq optional. It is used with VMT.
Make redis optional. The services depends on redis include:
- 'web/sync' services and 'chunkupload' (redisson)
- RelatedRec(recommendation)
- lottery, which has been removed

So far, the only external dependency is mysql.

--- a/src/main/webapp/WEB-INF/conf/vwbconfig.properties
+++ b/src/main/webapp/WEB-INF/conf/vwbconfig.properties
@@ -53,6 +53,7 @@ theme=full
 # Used in UmtSsoLoginProvider.java , remove?
 duckling.dct.localName=dct
 
+######## VMT ########
 #duckling.vmt.site = http://localhost:8080/vmt
 #duckling.vmt.keyCenter = ${duckling.vmt.site}/keyServiceServlet
 #duckling.vmt.api.service = ${duckling.vmt.site}/newServiceServlet
@@ -62,6 +63,14 @@ duckling.dct.localName=dct
 # duckling.vmt.service.address=${duckling.vmt.site}/services
 # disabled if set to 'null'
 duckling.vmt.service.address=null
+
+# mq will be skipped when VMT is not used
+### MessageQueue ###
+duckling.mq.host=127.0.0.1
+duckling.mq.exchange=vmt-test-topic
+duckling.mq.queuename=ddl-qms26711
+# duckling.mq.username=<move-to-secret>
+# duckling.mq.password=<move-to-secret>
 
 ####### CLB ###########
 duckling.clb.site=http://127.0.0.1:8090/clb
@@ -141,8 +150,11 @@ oauth.token.timeout=1440
 # duckling.memcached.host=10.10.1.76:11211
 duckling.memcached.host=null
 
-#duckling.redis.server is for recommender system
-duckling.redis.server=127.0.0.1
+# 'web/sync' and 'chunkupload' (redisson) and RelatedRec use redis, in
+# addition to IDGenerator. 
+# 'null' means disabled
+# duckling.redis.server=127.0.0.1
+duckling.redis.server=null
 duckling.redis.port=6379
 
 ddl.client.accepted.ip=159\\.226\\.(14\\.1\\d{1,2}|251\\.\\d{1,3}|56\\.139|27\\.45)|159\\.226\\.10\\.138
@@ -154,13 +166,6 @@ ddl.client.accepted.ip=159\\.226\\.(14\\.1\\d{1,2}|251\\.\\d{1,3}|56\\.139|27\\.
 #############################################################
 # duckling.vmt.getteaminfo.user=<move-to-secret>
 # duckling.vmt.getteaminfo.password=<move-to-secret>
-
-### MessageQueue ###
-duckling.mq.host=127.0.0.1
-duckling.mq.exchange=vmt-test-topic
-duckling.mq.queuename=ddl-qms26711
-# duckling.mq.username=<move-to-secret>
-# duckling.mq.password=<move-to-secret>
 
 # send email notice time, HH:mm
 duckling.emailnotice.triggertime=01:01
