Start Porting to Derby. Sql files modified and tables initialized when startup.

--- a/src/main/webapp/WEB-INF/conf/vwbconfig.properties
+++ b/src/main/webapp/WEB-INF/conf/vwbconfig.properties
@@ -3,28 +3,53 @@
 # takes precedence over here.
 # 
 
-#####################
-# Datasource config #
-#####################
-c3p0.driverClass = com.mysql.jdbc.Driver
-database = dkl_ddl
-database.ip = 127.0.0.1:3306
-c3p0.url = jdbc:mysql://${database.ip}/${database}?useUnicode=true&characterEncoding=utf8&zeroDateTimeBehavior=convertToNull
+#############
+# for MySQL #
+#############
+# c3p0.driverClass = com.mysql.jdbc.Driver
+# database = dkl_ddl
+# database.ip = 127.0.0.1:3306
+# c3p0.url = jdbc:mysql://${database.ip}/${database}?useUnicode=true&characterEncoding=utf8&zeroDateTimeBehavior=convertToNull
+# # c3p0.username = <move-to-secret>
+# # c3p0.password = <move-to-secret>
+# c3p0.acquireIncrement = 5
+# c3p0.initialPoolSize = 10
+# c3p0.maxPoolSize = 5
+# c3p0.minPoolSize = 5
+# c3p0.maxStatements = 10
+# c3p0.preferredTestQuery = SELECT 1
+# c3p0.maxConnectionAge = 3600
+# c3p0.acquireRetryAttempts=3
+# c3p0.testConnectionOnCheckout=true
+
+# databaseSub = dkl_ddlsub
+# databaseSub.ip = 127.0.0.1:3306
+# databaseSub.url = jdbc:mysql://${databaseSub.ip}/${databaseSub}?useUnicode=true&characterEncoding=utf8&zeroDateTimeBehavior=convertToNull
+# # databaseSub.username = <move-to-secret>
+# # databaseSub.password = <move-to-secret>
+
+#############
+# for Derby #
+#############
+c3p0.driverClass = org.apache.derby.jdbc.EmbeddedDriver
+c3p0.url = jdbc:derby:dkl_ddl
+c3p0.create.url = jdbc:derby:dkl_ddl;create=true
 # c3p0.username = <move-to-secret>
 # c3p0.password = <move-to-secret>
-c3p0.acquireIncrement = 5
-c3p0.initialPoolSize = 10
-c3p0.maxPoolSize = 5
-c3p0.minPoolSize = 5
-c3p0.maxStatements = 10
-c3p0.preferredTestQuery = SELECT 1
+c3p0.acquireIncrement = 1
+c3p0.initialPoolSize = 1
+c3p0.maxPoolSize = 3
+c3p0.minPoolSize = 1
+c3p0.maxStatements =5 
 c3p0.maxConnectionAge = 3600
-c3p0.acquireRetryAttempts=60
-c3p0.testConnectionOnCheckout=true
+c3p0.acquireRetryAttempts=2
+# Retry after 3 seconds. This matters when initializing tables at the first time.
+c3p0.acquireRetryDelay=3000
+c3p0.preferredTestQuery = SELECT 1
+c3p0.testConnectionOnCheckout=false
 
-databaseSub = dkl_ddlsub
-databaseSub.ip = 127.0.0.1:3306
-databaseSub.url = jdbc:mysql://${databaseSub.ip}/${databaseSub}?useUnicode=true&characterEncoding=utf8&zeroDateTimeBehavior=convertToNull
+databaseSub.url = jdbc:derby:dkl_ddlsub
+databaseSub.create.url = jdbc:derby:dkl_ddlsub;create=true
 # databaseSub.username = <move-to-secret>
 # databaseSub.password = <move-to-secret>
 
