--- a/pom.xml
+++ b/pom.xml
@@ -35,10 +35,15 @@
     </dependency>
 
     <dependency>
-      <groupId>mysql</groupId>
-      <artifactId>mysql-connector-java</artifactId>
-      <version>5.1.20</version>
+      <groupId>org.apache.derby</groupId>
+      <artifactId>derby</artifactId>
+      <version>10.14.2.0</version>
     </dependency>
+    <!-- <dependency> -->
+    <!--   <groupId>mysql</groupId> -->
+    <!--   <artifactId>mysql-connector-java</artifactId> -->
+    <!--   <version>5.1.20</version> -->
+    <!-- </dependency> -->
     <dependency>
       <groupId>c3p0</groupId>
       <artifactId>c3p0</artifactId>
