Fix a bug on .js file encoding in Windows, by adding a defaultUTF8 servlet. For the time being, there is no global web.xml in 'dklboot', but this would be added.

--- a/src/main/webapp/WEB-INF/conf/log4j.properties
+++ b/src/main/webapp/WEB-INF/conf/log4j.properties
@@ -4,7 +4,8 @@
 #WARN 4
 #INFO 6
 #DEBUG 7
-log4j.rootCategory=info,FileLog, Console
+# log4j.rootCategory=info,FileLog, Console
+log4j.rootCategory=info, FileLog
 log4j.logger.org.springframework.web.servlet.mvc.annotation=WARN
 log4j.logger.org.springframework.web.servlet.mvc.method.annotation=WARN
 #log4j.logger.net.duckling.ddl=DEBUG
