--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -106,12 +106,29 @@
     <url-pattern>/</url-pattern>
   </servlet-mapping>
 
+  <servlet>
+    <servlet-name>defaultUTF8</servlet-name>
+    <servlet-class>org.apache.catalina.servlets.DefaultServlet</servlet-class>
+    <init-param>
+      <param-name>debug</param-name>
+      <param-value>0</param-value>
+    </init-param>
+    <init-param>
+      <param-name>listings</param-name>
+      <param-value>false</param-value>
+    </init-param>
+    <init-param>    
+      <param-name>fileEncoding</param-name>
+      <param-value>utf-8</param-value>
+    </init-param>
+    <load-on-startup>1</load-on-startup>
+  </servlet>
   <servlet-mapping>
-    <servlet-name>default</servlet-name>
+    <servlet-name>defaultUTF8</servlet-name>
     <url-pattern>*.js</url-pattern>
   </servlet-mapping>
   <servlet-mapping>
-    <servlet-name>default</servlet-name>
+    <servlet-name>defaultUTF8</servlet-name>
     <url-pattern>*.css</url-pattern>
   </servlet-mapping>
   <servlet-mapping>
@@ -131,15 +148,15 @@
     <url-pattern>*.jpg</url-pattern>
   </servlet-mapping>
   <servlet-mapping>
-    <servlet-name>default</servlet-name>
+    <servlet-name>defaultUTF8</servlet-name>
     <url-pattern>*.html</url-pattern>
   </servlet-mapping>
   <servlet-mapping>
-    <servlet-name>default</servlet-name>
+    <servlet-name>defaultUTF8</servlet-name>
     <url-pattern>*.htm</url-pattern>
   </servlet-mapping>
   <servlet-mapping>
-    <servlet-name>default</servlet-name>
+    <servlet-name>defaultUTF8</servlet-name>
     <url-pattern>*.xml</url-pattern>
   </servlet-mapping>
   <servlet-mapping>
@@ -151,7 +168,7 @@
     <url-pattern>*.zip</url-pattern>
   </servlet-mapping>
   <servlet-mapping>
-    <servlet-name>default</servlet-name>
+    <servlet-name>defaultUTF8</servlet-name>
     <url-pattern>*.txt</url-pattern>
   </servlet-mapping>
   <servlet-mapping>
@@ -171,7 +188,7 @@
     <url-pattern>*.svg</url-pattern>
   </servlet-mapping>
   <servlet-mapping>
-    <servlet-name>default</servlet-name>
+    <servlet-name>defaultUTF8</servlet-name>
     <url-pattern>*.properties</url-pattern>
   </servlet-mapping>
   <servlet-mapping>
