Sort out configuration for base url and use 'duckling.ddl.baseURL' in the same way as 'umt' and 'clb'. This is also required by 'dklboot'.

--- a/src/test/resources/WEB-INF/conf/vwbconfig.properties
+++ b/src/test/resources/WEB-INF/conf/vwbconfig.properties
@@ -54,23 +54,23 @@ databaseSub.create.url = jdbc:derby:dkl_ddlsub;create=true
 # databaseSub.password = <move-to-secret>
 
 ####### UMT ###########
-duckling.umt.site = http://localhost:8090/umt
+duckling.umt.baseURL = http://localhost:8090/umt
 duckling.umt.theme = 
-duckling.umt.login = ${duckling.umt.site}/login
-duckling.umt.logout=${duckling.umt.site}/logout
-duckling.umt.publicKey=${duckling.umt.site}/getUMTPublicKey
-duckling.umt.regist=${duckling.umt.site}/registEmail.do
-duckling.umt.link.regist=${duckling.umt.site}/regist.jsp
-duckling.umt.service.url=${duckling.umt.site}/services
-duckling.umt.change.password=${duckling.umt.site}/user/password.do?act=showChangePassword
-duckling.umt.api.getLastLoginTime=${duckling.umt.site}/rest/api?act=getLastLoginTime&cstnetId=
+duckling.umt.login = ${duckling.umt.baseURL}/login
+duckling.umt.logout=${duckling.umt.baseURL}/logout
+duckling.umt.publicKey=${duckling.umt.baseURL}/getUMTPublicKey
+duckling.umt.regist=${duckling.umt.baseURL}/registEmail.do
+duckling.umt.link.regist=${duckling.umt.baseURL}/regist.jsp
+duckling.umt.service.url=${duckling.umt.baseURL}/services
+duckling.umt.change.password=${duckling.umt.baseURL}/user/password.do?act=showChangePassword
+duckling.umt.api.getLastLoginTime=${duckling.umt.baseURL}/rest/api?act=getLastLoginTime&cstnetId=
 
 # umt oauth configure
 # client_id=<move-to-secret>
 # client_secret=<move-to-secret>
-redirect_uri=${duckling.baseURL}/system/login/token
-access_token_URL=${duckling.umt.site}/oauth2/token
-authorize_URL=${duckling.umt.site}/oauth2/authorize
+redirect_uri=${duckling.ddl.baseURL}/system/login/token
+access_token_URL=${duckling.umt.baseURL}/oauth2/token
+authorize_URL=${duckling.umt.baseURL}/oauth2/authorize
 scope=
 # theme could be full/simple/embed
 theme=full
@@ -98,13 +98,13 @@ duckling.mq.queuename=ddl-qms26711
 # duckling.mq.password=<move-to-secret>
 
 ####### CLB ###########
-duckling.clb.site=http://127.0.0.1:8090/clb
+duckling.clb.baseURL=http://127.0.0.1:8090/clb
 # duckling.clb.aone.user=<move-to-secret>
 # duckling.clb.aone.password=<move-to-secret>
 duckling.clb.aone.version=current
 duckling.clb.aone.ismaintain=false
-duckling.clb = ${duckling.clb.site}/rest
-duckling.clb.service= ${duckling.clb.site}/ServiceServlet
+duckling.clb = ${duckling.clb.baseURL}/rest
+duckling.clb.service= ${duckling.clb.baseURL}/ServiceServlet
 duckling.clb.security = app
 duckling.clb.dconvert.enable=true
 
@@ -130,11 +130,10 @@ duckling.skin.name=default
 ### ddl's url ###
 duckling.domain=localhost
 duckling.port=9090
-duckling.baseAddress=http://${duckling.domain}:${duckling.port}/ddl
-duckling.baseURL=${duckling.baseAddress}
+duckling.ddl.baseURL=http://${duckling.domain}:${duckling.port}/ddl
 # appName seems used in sso (UmtSsoLoginProvider.java)
 ducking.ddl.appName=
-duckling.toDhome=${duckling.baseAddress}/dhome/system/fromDDL
+duckling.toDhome=${duckling.ddl.baseURL}/dhome/system/fromDDL
 
 duckling.site.name=Duckling — Sharing, Collaboration and Teamwork
 duckling.dateformat=yyyy-MM-dd HH:mm
