--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -33,11 +33,12 @@
       org.springframework.web.util.Log4jConfigListener
     </listener-class>
   </listener>
-  <listener>
-    <listener-class>
-      org.springframework.web.util.WebAppRootListener
-    </listener-class>
-  </listener>
+  <!-- Log4jConfigListener sets 'webAppRootKey' implicitly -->
+  <!-- <listener> -->
+  <!--   <listener-class> -->
+  <!--     org.springframework.web.util.WebAppRootListener -->
+  <!--   </listener-class> -->
+  <!-- </listener> -->
   <listener>
     <listener-class>
       org.springframework.web.context.ContextLoaderListener
