Add a few log for debugging 'team-not-found', an error caused by corrupted data.

--- a/src/main/webapp/WEB-INF/conf/vwbconfig.properties
+++ b/src/main/webapp/WEB-INF/conf/vwbconfig.properties
@@ -133,7 +133,7 @@ duckling.ddl.baseURL=http://localhost:9090/ddl
 ducking.ddl.appName=
 duckling.toDhome=${duckling.ddl.baseURL}/dhome/system/fromDDL
 
-duckling.site.name=Duckling — Sharing, Collaboration and Teamwork
+duckling.site.name=Sharing, Collaboration and Teamwork
 duckling.dateformat=yyyy-MM-dd HH:mm
 
 email.mail.smtp.host=smtp.qq.com
