Disable not-working features, such as sharing.

--- a/src/main/webapp/WEB-INF/conf/vwbconfig.properties
+++ b/src/main/webapp/WEB-INF/conf/vwbconfig.properties
@@ -106,7 +106,7 @@ duckling.clb.aone.ismaintain=false
 duckling.clb = ${duckling.clb.baseURL}/rest
 duckling.clb.service= ${duckling.clb.baseURL}/ServiceServlet
 duckling.clb.security = app
-duckling.clb.dconvert.enable=true
+duckling.clb.dconvert.enable=false
 
 # nginx forward flag: nginx or tomcat
 duckling.clb.access.mode=tomcat
@@ -133,7 +133,7 @@ duckling.ddl.baseURL=http://localhost:9090/ddl
 ducking.ddl.appName=
 duckling.toDhome=${duckling.ddl.baseURL}/dhome/system/fromDDL
 
-duckling.site.name=Sharing, Collaboration and Teamwork
+duckling.site.name=DDL
 duckling.dateformat=yyyy-MM-dd HH:mm
 
 email.mail.smtp.host=smtp.qq.com
