Refactor email configuration, which could be shared with UMT via dklboot now.

--- a/src/main/resources/templates/default.properties
+++ b/src/main/resources/templates/default.properties
@@ -1538,12 +1538,12 @@ duckling.dateformat=dateformat
 duckling.site.name=sitename
 duckling.umt.vo=VO
 duckling.clb.localuser=clb localuser
-email.mail.smtp.host=smtp host
+duckling.email.smtp.host=smtp host
 email.mail.smtp.auth=smtp auth
-email.fromAddress=fromAddress
+duckling.email.smtp.from=fromAddress
 email.address=address
-email.username=username
-email.password=password
+duckling.email.smtp.username=username
+duckling.email.smtp.password=password
 duckling.sharepage.expireperiod=valid period of shared page
 duckling.hour=hours
 continuationEditMinutes=continuation  time
