--- a/src/main/webapp/WEB-INF/conf/vwbconfig.properties
+++ b/src/main/webapp/WEB-INF/conf/vwbconfig.properties
@@ -136,13 +136,13 @@ duckling.toDhome=${duckling.ddl.baseURL}/dhome/system/fromDDL
 duckling.site.name=DDL
 duckling.dateformat=yyyy-MM-dd HH:mm
 
-email.mail.smtp.host=smtp.qq.com
+
 email.mail.smtp.auth=true
 email.displayName=Duckling DDL
-# email.fromAddress=<move-to-secret>
-# email.address=<move-to-secret>
-# email.username=<move-to-secret>
-# email.password=<move-to-secret>
+# duckling.email.smtp.host=<move-to-secret>
+# duckling.email.smtp.from=<move-to-secret>
+# duckling.email.smtp.username=<move-to-secret>
+# duckling.email.smtp.password=<move-to-secret>
 
 
 emailnotifier.subjectLine=Update Notification from DDL
