--- a/src/main/webapp/WEB-INF/templates/admin/site.properties
+++ b/src/main/webapp/WEB-INF/templates/admin/site.properties
@@ -16,19 +16,19 @@ duckling.dateformat =yyyy-MM-dd HH:mm
 
 #Email configuration for all program. 
 #mysql fasong dizhi
-email.mail.smtp.host=smtp.domain.cn
+duckling.email.smtp.host=smtp.domain.cn
 #mysql fasong yaobuyaorenzheng
 email.mail.smtp.auth=true
 #delete  -->log 
 email.mail.pop3.host=pop.domain.cn
 #mysql huifu youjiandizhi
-email.fromAddress=document@domain.cn
+duckling.email.smtp.from=document@domain.cn
 #mysql fasongdizhi
 email.address=document@domain.cn
 #mysql
-email.username=document@domain.cn
+duckling.email.smtp.username=document@domain.cn
 #mysql
-email.password=PASSWORD
+duckling.email.smtp.password=PASSWORD
 
 
 
