--- a/src/test/resources/WEB-INF/conf/vwbconfig-secret-TEMPLATE.properties
+++ b/src/test/resources/WEB-INF/conf/vwbconfig-secret-TEMPLATE.properties
@@ -20,8 +20,8 @@ duckling.vmt.getteaminfo.password=
 
 email.fromAddress=
 email.address=
-email.username=
-email.password=
+duckling.email.smtp.username=
+duckling.email.smtp.password=
 
 # rabbitmq user
 duckling.mq.username=
