--- a/src/main/webapp/WEB-INF/conf/vwbconfig-secret-TEMPLATE.properties
+++ b/src/main/webapp/WEB-INF/conf/vwbconfig-secret-TEMPLATE.properties
@@ -18,10 +18,10 @@ duckling.clb.aone.password=
 duckling.vmt.getteaminfo.user=
 duckling.vmt.getteaminfo.password=
 
-email.fromAddress=
-email.address=
-email.username=
-email.password=
+duckling.email.smtp.host=
+duckling.email.smtp.from=
+duckling.email.smtp.username=
+duckling.email.smtp.password=
 
 # rabbitmq user
 duckling.mq.username=
