--- a/src/test/resources/WEB-INF/conf/vwbconfig.properties
+++ b/src/test/resources/WEB-INF/conf/vwbconfig.properties
@@ -138,13 +138,13 @@ duckling.toDhome=${duckling.ddl.baseURL}/dhome/system/fromDDL
 duckling.site.name=Duckling — Sharing, Collaboration and Teamwork
 duckling.dateformat=yyyy-MM-dd HH:mm
 
-email.mail.smtp.host=smtp.qq.com
+duckling.email.smtp.host=smtp.qq.com
 email.mail.smtp.auth=true
 email.displayName=Duckling DDL
-# email.fromAddress=<move-to-secret>
+# duckling.email.smtp.from=<move-to-secret>
 # email.address=<move-to-secret>
-# email.username=<move-to-secret>
-# email.password=<move-to-secret>
+# duckling.email.smtp.username=<move-to-secret>
+# duckling.email.smtp.password=<move-to-secret>
 
 
 emailnotifier.subjectLine=Update Notification from DDL
